--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>M3U8 Player with Reverse Proxy</title>
 </head>
 <body>
-
+<iframe frameborder="0" allowfullscreen="" scrolling="no" allow="autoplay;fullscreen" src="http://anym3u8player.com/tv/video-player.php?url=http://server.sibfungold.info:8080/live/abdulwahab1989/jz8VSabdulwahab1989kWiUS/54304.m3u8"></iframe>
 <video controls width="100%" height="auto">
     <source src="proxy.php" type="application/x-mpegURL">
     Your browser does not support the video tag.
